# PoB

./: .coverage  .env.example  .gitignore  docker-compose.yml  pyproject.toml
clientgen/: Dockerfile  app.py
lb/: Dockerfile  app.py
lb/clients/: clientgen_api.py  worker_api.py
lb/control/: experiment.py  traffic.py  weights.py  worker_config.py  worker_faults.py
lb/core/: registry.py  smooth_wrr.py
lb/stream/: state_stream.py
tests/: test_clientgen_app.py  test_lb_app_logic.py  test_lb_clientgen_api.py  test_lb_experiment_reset.py  test_lb_traffic_router.py  test_lb_worker_api_client.py  test_lb_worker_faults_router.py  test_smooth_wrr.py  test_stream_ws.py  test_weights_router.py  test_worker_app_metrics.py  test_worker_config_proxy.py  test_worker_fault_registry.py  test_worker_faults.py  test_workerstate_weights.py
ui/: angular.json  package-lock.json  package.json  proxy.conf.json
ui/src/: index.html  styles.scss
ui/src/app/: app.component.ts  app.config.ts  app.routes.ts
ui/src/app/core/api/: experiment-api.service.ts  http.types.ts  lb-api.service.ts  traffic-api.service.ts  weights-api.service.ts  worker-api.service.ts
ui/src/app/core/config/: environment.tokens.ts
ui/src/app/core/interceptors/: error-normalizer.interceptor.ts
ui/src/app/core/models/: faults.models.ts  lb.models.ts  traffic.models.ts  worker.models.ts
ui/src/app/core/realtime/: state-stream.service.ts  ws.client.ts
ui/src/app/core/utils/: url.ts
ui/src/app/features/workers/: worker-details-api.service.ts
worker/: Dockerfile  app.py  faults.py
(+33 files in other folders)
